kub/appflight-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: appflight
  name: appflight
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appflight
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/network: "true"
        io.kompose.service: appflight
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_PASSWORD
              value: admin
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://flightdb:5432/flight_db
            - name: SPRING_DATASOURCE_USERNAME
              value: admin
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: update
            - name: SPRING_RABBITMQ_HOST
              value: rabbitmq
          image: ffiodicedev/air_flights
          name: flight-service
          ports:
            - containerPort: 8083
          resources: {}
      restartPolicy: Always
status: {}
