kub/resdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: resdb
  name: resdb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: resdb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/network: "true"
        io.kompose.service: resdb
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: res_db
            - name: POSTGRES_PASSWORD
              value: admin
            - name: POSTGRES_USER
              value: admin
            - name: restart
              value: unless-stopped
          image: postgres
          name: resdbimage
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/datares
              name: db-datares
      restartPolicy: Always
      volumes:
        - name: db-datares
          persistentVolumeClaim:
            claimName: db-datares
status: {}
