kub/appauth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: appauth
  name: appauth
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appauth
  template:
    metadata:
      labels:
        io.kompose.service: appauth
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_PASSWORD
              value: admin
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://authdb:5432/auth_db
            - name: SPRING_DATASOURCE_USERNAME
              value: admin
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: update
          image: ffiodicedev/air_auth
          name: auth-service
          ports:
            - containerPort: 8082
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: appauth
  name: appauth
spec:
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    io.kompose.service: appauth
  type: ClusterIP
