kub/appgateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: appgateway
  name: appgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appgateway
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: appgateway
    spec:
      containers:
        - env:
            - name: SERVICES_AUTHENTICATION_AUTHADDRESS
              value: http://appauth:8082
            - name: SERVICES_AUTHENTICATION_PROFILEADDRESS
              value: http://appprofile:8081
            - name: SERVICES_FLIGHTS_FLIGHTSADDRESS
              value: http://appflight:8083
            - name: SERVICES_FLIGHTS_RESADDRESS
              value: http://appres:8084
            - name: SERVICES_FLIGHTS_FLIGHTSGENADDRESS
              value: http://flightgen:5000
            - name: SPRING_RABBITMQ_HOST
              value: rabbitmq
          image: ffiodicedev/air_gateway
          name: api-gateway
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: appgateway
  name: appgateway
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: appgateway
  type: ClusterIP
