kub/appprofile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: appprofile
  name: appprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appprofile
  template:
    metadata:
      labels:
        io.kompose.service: appprofile
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_PASSWORD
              value: admin
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://profiledb:5432/profile_db
            - name: SPRING_DATASOURCE_USERNAME
              value: admin
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: update
            - name: SPRING_RABBITMQ_HOST
              value: rabbitmq
          image: ffiodicedev/air_profile
          name: profile-service
          ports:
            - containerPort: 8081
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: appprofile
  name: appprofile
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: appprofile
  type: ClusterIP
