kub/authdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: authdb
  name: authdb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: authdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: authdb
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: auth_db
            - name: POSTGRES_PASSWORD
              value: admin
            - name: POSTGRES_USER
              value: admin
            - name: restart
              value: unless-stopped
          image: postgres
          name: authdbimage
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: authdb
  name: authdb
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: authdb
  type: ClusterIP
