kub/flightdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: flightdb
  name: flightdb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: flightdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: flightdb
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: flight_db
            - name: POSTGRES_PASSWORD
              value: admin
            - name: POSTGRES_USER
              value: admin
            - name: restart
              value: unless-stopped
          image: postgres
          name: fligthdbimage
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/datafli
              name: db-datafli
      restartPolicy: Always
      volumes:
        - name: db-datafli
          persistentVolumeClaim:
            claimName: db-datafli
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: flightdb
  name: flightdb
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: flightdb
  type: ClusterIP
