kub/appgateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appauth-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" 
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appgateway
                port:
                  number: 8080
